--- a/MarkMe_Frontend/Dashboard/attendance.html
+++ b/MarkMe_Frontend/Dashboard/attendance.html
@@ -39,7 +39,7 @@
 		<div class="content-box">
 	<br/>
       
-    <div class="table">
+    <div class="table" id="table-scroll">
         <table id="table">
           <tr>
             <th>Date</th>
