--- a/MarkMe_Frontend/Dashboard/index.html
+++ b/MarkMe_Frontend/Dashboard/index.html
@@ -21,8 +21,8 @@
 
 	<div class="head">
 		<div class="col-div-6">
-      <span style="font-size:30px;cursor:pointer; color: white;" class="nav"  >&#9776; Dashboard</span>
-      <span style="font-size:30px;cursor:pointer; color: white;" class="nav2"  >&#9776; Dashboard</span>
+      <span style="font-size:30px;cursor:pointer; color: white;" class="nav">&#9776; Dashboard</span>
+      <span style="font-size:30px;cursor:pointer; color: white;" class="nav2">&#9776; Dashboard</span>
     </div>
 	
 	<div class="col-div-6">
@@ -43,7 +43,7 @@
       </button>
 			<br/>
       
-  <div class="table">
+  <div class="table" id="table-scroll">
     <table id="table">
       <tr>
         <th>Course Title</th>
