--- a/MarkMe_Frontend/index.html
+++ b/MarkMe_Frontend/index.html
@@ -1,35 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Attendance Management System</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MarkMe - Attendance Management System</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
     <header>
-      <h1>MarkMe</h1>
+        <h1>MarkMe - Attendance Management System</h1>
+        <nav>
+            <ul>
+                <li><a href="#features">Features</a></li>
+                <li><a href="#pricing">Pricing</a></li>
+                <li><a href="#about">About Us</a></li>
+                <li><a href="#contact">Contact Us</a></li>
+            </ul>
+        </nav>
     </header>
+
     <main>
-      <section class="features">
-        <h2>Features</h2>
-        <ul>
-          <li>Real-time attendance tracking</li>
-          <li>Automated report generation</li>
-          <li>Easy integration with other systems</li>
-          <li>User-friendly interface</li>
-        </ul>
-      </section>
-      <section class="call-to-action">
-        <h2>Try it now!</h2>
-        <p>
-          Sign up for a free trial and start managing your attendance
-          efficiently!
-        </p>
-        <a href="#" class="button">Sign up</a>
-      </section>
+        <section id="hero">
+            <img src="hero-image.jpg" alt="MarkMe Hero Image">
+            <a href="signup.html" class="cta-button">Sign Up Now</a>
+        </section>
+
+        <section id="features">
+            <h2>Key Features</h2>
+            <ul>
+                <li>Online attendance tracking</li>
+                <li>Automated email notifications</li>
+                <li>Attendance reports and analytics</li>
+                <li>User-friendly interface</li>
+            </ul>
+        </section>
+
+        <section id="pricing">
+            <h2>Pricing</h2>
+            <ul>
+                <li>Basic - $9.99/month</li>
+                <li>Pro - $19.99/month</li>
+                <li>Enterprise - Contact Us</li>
+            </ul>
+        </section>
+
+        <section id="about">
+            <h2>About Us</h2>
+            <p>MarkMe is a leading attendance management system that simplifies attendance tracking and saves you time.</p>
+        </section>
+
+        <section id="contact">
+            <h2>Contact Us</h2>
+            <form action="#">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name">
+
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email">
+
+                <label for="message">Message:</label>
+                <textarea id="message" name="message"></textarea>
+
+                <input type="submit" value="Submit">
+            </form>
+
+            <p>Email: info@markme.com</p>
+            <p>Phone: 555-555-5555</p>
+        </section>
     </main>
+
     <footer>
-      <p>&copy; 2023 MarkMe. All rights reserved.</p>
+        <p>&copy; 2023 MarkMe. All rights reserved.</p>
+        <ul>
+            <li><a href="#">Facebook</a></li>
+            <li><a href="#">Twitter</a></li>
+            <li><a href="#">LinkedIn</a></li>
+            <li><a href="#">Instagram</a></li>
+        </ul>
     </footer>
-  </body>
+</body>
 </html>
