Frontend Index changes

--- a/MarkMe_Frontend/login.html
+++ b/MarkMe_Frontend/login.html
@@ -24,7 +24,7 @@
                 Remember Me
             </label>
 
-            <input type="submit" value="Login">
+            <a href="/MarkMe_Frontend/Dashboard/index.html"><input type="submit" value="Login"></a>
         </form>
 
         <a href="forgot-password.html">Forgot your password?</a>
