--- a/MarkMe_Frontend/index.html
+++ b/MarkMe_Frontend/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MarkMe - Attendance Management System</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
@@ -16,8 +17,18 @@
               <li><a href="#">Home</a></li>
               <li><a href="#">Features</a></li>
               <li><a href="#">Pricing</a></li>
-              <li><a href="login.html">Login</a></li>
-              <li><a href="signup.html">Sign Up</a></li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Signup
+                </a>
+                <ul class="dropdown-menu dropdown-menu-dark bigger" aria-labelledby="navbarDarkDropdownMenuLink">
+                  <li><a class="dropdown-item" href="/MarkMe_Backend/MarkMeApp/templates/InstructorSignUp.html">As Lecturer</a></li>
+                  <li><a class="dropdown-item" href="/MarkMe_Backend/MarkMeApp/templates/StudentSignUp.html">As Student</a></li>
+                  <li><a class="dropdown-item" href="/MarkMe_Backend/MarkMeApp/templates/GuardiansSignUp.html">As Parent</a></li>
+                </ul>
+              </li>
+              <li><a href="login.html">Login
+              </a></li>
             </ul>
           </div>
         </nav>
@@ -70,5 +81,7 @@
       </ul>
       <p>&copy; 2023 MarkMe. All rights reserved.</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="Dashboard/script.js"></script>
   </body>
 </html>
