leo comit after crash

--- a/MarkMe_Frontend/Dashboard/index.html
+++ b/MarkMe_Frontend/Dashboard/index.html
@@ -10,7 +10,7 @@
 <body>
 	
 	<div id="mySidenav" class="sidenav">
-	<p class="logo"><span><i class="fa fa-medium icons"></i></span> arkMe</p>
+	<p class="logo"><span><i class="fa fa-medium icons"></i> </span>  arkMe </p>
   <a href="index.html" class="icon-a"><i class="fa fa-dashboard icons"></i> &nbsp;&nbsp;Dashboard</a>
   <a href="attendance.html"class="icon-a"><i class="fa fa-list icons"></i> &nbsp;&nbsp;Attendance</a>
   <a href="#"class="icon-a"><i class="fa fa-flag icons"></i> &nbsp;&nbsp;Report</a>
@@ -23,6 +23,7 @@
 		<div class="col-div-6">
       <span style="font-size:30px;cursor:pointer; color: white;" class="nav">&#9776; Dashboard</span>
       <span style="font-size:30px;cursor:pointer; color: white;" class="nav2">&#9776; Dashboard</span>
+      <p class="id">ID: HjdSTp</p>
     </div>
 	
 	<div class="col-div-6">
